feat: criação da entidade Produtos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,11 @@
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                               /* Enable error reporting for expressions and declarations with an implied 'any' type. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false
+
   },
   "exclude": [
     "node_modules",
