--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.0",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
@@ -38,6 +39,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
