--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.0",
     "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
+    "add": "^2.0.6",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.2.0",
@@ -43,11 +46,13 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.8",
+    "ioredis": "^4.28.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.2.29",
     "typeorm-pagination": "^2.0.3"
