--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "rate-limiter-flexible": "^2.1.16",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.2.29",
